--- a/styles/cheatSheet.css
+++ b/styles/cheatSheet.css
@@ -10,8 +10,8 @@
     margin: 5px;
 }
 
-body {
-  background: rgb(255, 248, 232);
+html, body, #root {
+  background: rgb(255, 248, 232)!important;
 }
 
 * {
@@ -52,4 +52,20 @@ body {
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/quicksand/v19/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+.showfalse {
+  display: none;
+}
+
+.showtrue {
+  display: flex;
+}
+
+.wrapContain {
+  margin: 20px;
+}
+
+.advancedSection {
+  margin: 10px;
 }
