--- a/styles/cheatSheet.css
+++ b/styles/cheatSheet.css
@@ -15,7 +15,7 @@ html, body, #root {
 }
 
 * {
-  font-family: 'Quicksand', sans-serif!important;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .advancedArea {
